# advantcode2024

./: .flake8  README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py
